--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -11,6 +11,7 @@ As there is a lot of terms used in this thesis related to the kind of job Infome
 \item \textbf{Monitoring:} In relation to the news monitoring (news surveillance) that Infomedia does, is the act of collecting news that holds information of value to our customers.
 \item \textbf{Tag:} Used in Ontology\footnote{\url{http://en.wikipedia.org/wiki/Ontology_(information_science)}} to create words that describes the contents of an article.
 \item \textbf{Term:} Basically a word or collection of words that describes an object (person, place, topic etcetera). A term will be something that can be searched for. A term can also be a collection of words
+\item \textbf{Stop word:} A stop word is a word that offers little in textual context\footnote{\url{http://en.wikipedia.org/wiki/Stop_words}}. Stop words are common words (such as 'og', 'jeg', 'de', 'vores' and the like). For the most part these stop words have little meaning, and removing them from a text would normally cause no problem, however as the Wikipedia link also suggests the group "The Who" would removed from a text if you were to remove common English words. It would be possible to implement a list of stop word combinations that would not be removed such as "The Who", "Take That" and such.
 \end{itemize}
 
 \section{Matching}
