--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusion}
-In the large scale of things, the thesis ended up proving what we set out to prove, that we can in fact improve the results of Cosine algorithm by applying more algorithms to check the results. When talking about the Cosine score, a score above 0.9 would prove to be a definite match, but below that was big gray area in which we no long were sure. By the combination of the two algorithms we have now found evaluated those articles, and have been able to figure out whether the articles match or does not. We have also found that in addition of verification of matches, we are also able to now break the match in the sub groups, although with a degree of uncertainty (there is almost certainly false positives in the result sets). 
+In the large scale of things, the thesis ended up proving what we set out to prove, that we can in fact improve the results of Cosine algorithm by applying more algorithms to check the results. When talking about the Cosine score, a score above 0.9 would prove to be a definite match, but below that was big gray area in which we no long were sure. By the combination of the two algorithms we have now found and evaluated those article comparisons of interest, and have been able to figure out whether the articles match or does not. We have also found that in addition of verification of matches, we are also able to now break the match in the sub groups, although with a degree of uncertainty (there is almost certainly false positives in the result sets). 
 
 As mentioned earlier, this should undergo a lot of testing before being implemented, but as the prototype stands, we have at least proven that it is possible.
 
