--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,6 +1,6 @@
 \chapter{Discussion}
 
-This project is dealing with a topic that is of big importance to the industry that Infomedia works in, and it has proven to be anything, but a simple task. While this thesis is only a prototype on a system that would include several algorithms to do text matching, a few defining results were made. However, there is still a lot of testing to be done in order to call the system waterproof. This chapter will look into some of the issues that were discovered along the way.
+This project is dealing with a topic that is of big importance to the industry that Infomedia works in, and it has proven to be anything, but a simple task. While this thesis is only a prototype for a system that would include several algorithms to do text matching, a few defining results were made. However, there is still a lot of testing to be done in order to call the system waterproof. This chapter will look into some of the issues that were discovered along the way.
 
 \section{Text Normalization and Scores}
 As talked about in the beginning of this thesis, the issue of text normalization showed to have an impact. During the thesis we have seen several examples of the issues of not being able to do a full normalization of the article text before applying the algorithms. So far, no apparent issues have been found that includes special characters, but there have been a lot of formatting issues. We saw in figure ~\ref{JPPOLSencondHighestLCS} the problem with white spaces. This might not have been a deciding factor in most cases as to what match group have been applied to a comparison, but we cannot be sure.
@@ -23,6 +23,15 @@ Another issue brought onto this thesis by the limitations of time and personnel 
 \section{Low Score Comparisons}
 As we saw in figure ~\ref{LengthIssue} there are cases in which low score comparisons would provide interesting information. These might be rare and far in between, but we should still consider whether we should spend time and energy on finding these. One could argue that because these cases seems to be extremely rare (keeping in mind that we only tested few algorithms and sources), we could miss out on potential matches by dismissing these comparisons as no matches.
 
+\section{The Issue of Matches}
+Once all the data have been broken down and analysed, some where along the line someone will have to define the following: When is two articles a match. For better or for worse, this thesis is setting up a number of assumptions about when article are matching and when they are not, and as seen in the results there have been found a lot of good results. However as discussed earlier in this chapter there are still areas in which the algorithms falls short. They cannot decide when articles match without human hands to tell them when something is a match. This part of the problem falls to the "end users" of this product, in this case sales people or people with better lingual understanding that can help us set these defining boundaries that helps the algorithms when articles match. We need someone to tell the program when articles are defined as matching, how ever fussy that term may be. Having many algorithms that scores articles in different ways can tell us a wider story as too how well articles match, but the problem remains. In the end we will probably always have a number of matches that either are false positives or false negatives, so continuous verification of the results will be needed. With that comes adjusting the algorithms so that the next time, the results are some what better.
 
 \section{Overall}
-When all is said and done, this is after all, only a prototype. There is room for improvement and tweaking the way the program works, both in terms of coding but also in terms of scoring comparisons and text preparation. More testing would also be required in order to fully confirm that the way that the program works, actually produces true positive results. By and large the thesis did end up proving what we set out to do.
+When all is said and done, this is after all, only a prototype. There is room for improvement and tweaking the way the program works, both in terms of coding but also in terms of scoring comparisons and text preparation. More testing would also be required in order to fully confirm that the way that the program works, actually produces true positive results. By and large the thesis did end up proving what we set out to do, that is
+
+\begin{itemize}
+	\item Analysed the currently implemented system and found out what was needed for picking a new algorithm.
+	\item Implemented the algorithm and in combination with the existing algorithm scored the corpus.
+	\item Went over the results produced by the two algorithms and verified or rejected their findings.
+	\item Proved that we were indeed able to get a better and more detailed result set by using a combination of algorithms, instead of the result produced by just the one already implemented.
+\end{itemize}
